expected/main/gens/primBitCompare-neg-32.err
ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 3
external e {primBitLt Word} :: Bit 31   -> Bit 31   -> Flag  -- not a number
         ^
Generator argument 1 (Word) does not have expected kind (nat)

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 4
external f {primBitLe}      :: Bit 32   -> Bit 32   -> Flag  -- missing param
         ^
Generator primBitLe requires 1 argument

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 2
entrypoint e, f
^
"e" is not in scope

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 2
entrypoint e, f
^
"f" is not in scope

ERROR: Aborting after 4 previously reported errors

